fix stretching panels

--- a/poem-demo/app/assets/stylesheets/main.less
+++ b/poem-demo/app/assets/stylesheets/main.less
@@ -1,5 +1,15 @@
 // @import "lib/bootstrap/less/bootstrap.less";
 
+.card > form {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.card > form > .card-body {
+  flex: 1 1 auto;
+}
+
 .card.panel-disabled {
   opacity: 0.55;
   filter: grayscale(35%);
